--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -54,8 +54,9 @@ body {
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
 }
 .login-wrapper {
-height: 360px;
-    width: 400px;}
+    min-height: 300px;
+    width: 400px;
+}
 .positronx {
     text-decoration: none;
     color: #ffffff;
@@ -126,4 +127,7 @@ height: 360px;
 }
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
     padding: 0.8375em 0;
+}
+.exit{
+    outline: none;
 }
