--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -103,7 +103,7 @@
                     Elektroninis paštas yra privalomas
                 </div>
                 <div *ngIf="registrationForm.controls.emailReg.errors?.pattern">
-                    Neteisingas elektroninis parašas
+                    Neteisingas elektroninis paštas
                 </div>
             </div>
             <mat-form-field class="example-full-width">
